--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.webjars:jquery:3.5.0'
+    implementation 'org.webjars:bootstrap:4.4.1-1'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.2'
 }
 
 test {
